third_party/move/move-compiler/tests/move_check/parser/invalid_call_lhs_return2.exp
error[E01013]: unsupported language construct
  ┌─ tests/move_check/parser/invalid_call_lhs_return2.move:3:9
  │
3 │         (return ())(0, 1);
  │         ^^^^^^^^^^^ Calls through computed functions not supported by this compiler

